[gd_scene load_steps=2 format=3 uid="uid://he4ph2su6ioo"]

[ext_resource type="Script" uid="uid://oiqhei2f8poa" path="res://pause_menu.gd" id="1_qb7bn"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qb7bn")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -106.0
offset_top = 40.0
offset_right = 106.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Game Paused"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -240.0
offset_right = 270.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Resume
"

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Options
"

[node name="QuitGameButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Quit
"

[connection signal="pressed" from="ButtonContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ButtonContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ButtonContainer/QuitGameButton" to="." method="_on_quit_to_menu_pressed"]
